<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="dialog_title">Информация о студенте</string>
	<string name="initials">Инициалы</string>
	<string name="st_edit_init">Введите инициалы</string>
	<string name="num_semester">Номер семестра</string>
	<string name="first">1</string>
	<string name="second">2</string>
	<string name="third">3</string>
	<string name="forth">4</string>
	
	<string name="telephone">Телефон</string>
	<string name="st_edit_tel">Номер телефона</string>
	<string name="email">Email</string>
	<string name="st_edit_email">email</string>
	
	<string name="dialog_ok"> OK </string>
	<string name="dialog_cancel"> Cancel </string>
	
	<string name="groupEditText"> Edit </string>
	
</resources>
